sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value position
	position = 0
        ^AlgGnomeSort:4: error: not found: value position
	while(position != getNombreValeurs()){
              ^AlgGnomeSort:5: error: not found: value position
		if(position == 0){
                   ^AlgGnomeSort:6: error: not found: value position
			position += 1
                        ^AlgGnomeSort:8: error: not found: value PlusPetit
		if(PlusPetit(position+1,position-1)){
                   ^AlgGnomeSort:9: error: not found: value position
			echange(position+1,position-1)
                                ^AlgGnomeSort:10: error: not found: value position
			position -= 1
                        ^AlgGnomeSort:12: error: not found: value position
			position += 1
                        ^