sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	position = 0
	while(position != getNombreValeurs()){
		if(position == 0){
			position += 1
		}
		if(PlusPetit(position+1,position-1)){
			echange(position+1,position-1)
			position -= 1
		}else{
			position += 1
		}
	}
}
